--- a/app/walkandplay/trunk/client/web/profile.html
+++ b/app/walkandplay/trunk/client/web/profile.html
@@ -114,21 +114,33 @@
     <!-- PROFILE OVERZICHT BLOCK-->
     <div id="profileblock" style="display:block;">
       <div id="GOTOeditview">edit</div>
-      <div id="generalInfo" style="display:block;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-        <div class="contentblock">
+      <div id="generalInfo" style="display:block;"> 
           <!-- CONTENT -->
 		   <div id="profilesummary">
-		   	<div id="summNickname">aaa</div>
+		   	<div id="summNickname"></div>
 			<div id="summNumTraces"></div>
 			<div id="summEmail"></div>
 			<div id="summTags"></div>
 			<img id="summPhotoid" />
 		   </div>
 		   <br/>
+          <!-- /CONTENT -->
+        </div>
+		<br/><br/>
+		
+		<div style="display:block; width:420px;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+        <div class="contentblock" style="height:150px;">
+          <!-- CONTENT -->
+
+		   <br/>
           <div id="mytraces"></div>
           <!-- /CONTENT -->
         </div>
         <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+		
+		
+		
+		
     </div>
     <!-- EINDE OVERZICHT BLOCK-->
     <!--ACCOUNT EDITING -->
