voor het weekend

--- a/app/walkandplay/trunk/client/web/profile.html
+++ b/app/walkandplay/trunk/client/web/profile.html
@@ -133,7 +133,9 @@
           <!-- CONTENT -->
 
 		   <br/>
-          <div id="mytraces"></div>
+          <div id="mytraces">
+		  
+		  </div>
           <!-- /CONTENT -->
         </div>
         <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
