--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -30,6 +30,9 @@
 <div id="highlitebox">
 	<h2>Featured Tracks</h2>
 	<p>
+		Feb 14, 2007 (!). <a href="http://www.geotracing.com/gt/?cmd=showtrack&user=lavitaebella&id=2616489&zoom=14&map=blanc">Lavitaebella walks a heart</a>.
+	</p>
+	<p>
 		Nov 29, 2006. A team of friends, <a href="http://www.vrienden-team.com" target="_new">"VriendenTeam"</a> uses
 		GeoTracing to track their route/photos in the <a href="http://www.amsterdamdakar.com/">Amsterdam Dakar Challenge</a>
 	</p>
