bliin: final checkin 1.0.10

--- a/app/bliin/trunk/server/webapp/index.html
+++ b/app/bliin/trunk/server/webapp/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>bliin &ordm; navigating experiences</title>
+	<title>bliin YourLIVE! &ordm; real-time social network</title>
 	<!-- $Id$  -->
 </head>
 <frameset rows="100%,*" border="0">
