--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -7,21 +7,31 @@
 	<script type="text/javascript" src="lib/openlayers/lib/OpenLayers.js"></script>
 	<script type="text/javascript">
 		<!--
-		var lon = 4.92;
+		var lon = 4.75;
 		var lat = 52.35;
 		var zoom = 10;
 		var map, layer1,layer2;
 
 		function init() {
-			map = new OpenLayers.Map( $('map') );
+			map = new OpenLayers.Map( $('map'), {controls: [new OpenLayers.Control.MouseDefaults(), new OpenLayers.Control.PanZoomBar()], maxResolution: 1.40625/2, numZoomLevels: 17});
 			layer1 = new OpenLayers.Layer.WMS( "OpenLayers WMS",
 					  "http://labs.metacarta.com/wms/vmap0", {layers: 'basic'} );
 			map.addLayer(layer1);
 
+			ww = new OpenLayers.Layer.WorldWind( "Bathy",
+			 "http://worldwind25.arc.nasa.gov/tile/tile.aspx?", 36, 4,
+			 {T:"bmng.topo.bathy.200406"});
+			 ww2 = new OpenLayers.Layer.WorldWind( "LANDSAT",
+				 "http://worldwind25.arc.nasa.gov/tile/tile.aspx", 2.25, 4,
+				 {T:"105"});
+			map.addLayer(ww);
+			map.addLayer(ww2);
 
-			/* layer2 = new OpenLayers.Layer.WMS( "TopoNL",
-					  "http://suwa:8080/geoserver/wms", {layers: 'topp:amstelveen'} );
-			map.addLayer(layer2);     */
+			layer2 = new OpenLayers.Layer.WMS( "Routes",
+					  "http://suwa:8080/geoserver/wms",
+				{layers: 'topp:g_route', format: 'image/png',
+				 transparent: 'true'});
+			map.addLayer(layer2);
 
 			map.setCenter(new OpenLayers.LonLat(lon, lat), zoom);
 			map.addControl( new OpenLayers.Control.LayerSwitcher() );
