--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -19,19 +19,24 @@
 			//map.addLayer(layer1);
 
 			// PostGIS routes projected on topo-map
-			var aveen='http://berlin/cgi-bin/mapserv?map=/var/keyworx/webapps/mapserver/topnl/topnl.map';
-			layer1 = new OpenLayers.Layer.WMS( "TOPNL WMS",
-					  aveen, {layers: 'amstelveen,routes'} );
+			var wmsURL='http://88.198.19.182/cgi-bin/mapserv?map=/var/keyworx/webapps/mapserver/topnl/topnl.map';
+			var sld='http://88.198.19.182/mapserver/topnl/select-route.sld';
+			layer1 = new OpenLayers.Layer.WMS( "Amstelveen Routes",
+					  wmsURL, {layers: 'amstelveen,routes', sld: sld} );
 			map.addLayer(layer1);
 
-			ww = new OpenLayers.Layer.WorldWind( "Bathy",
+			layer2 = new OpenLayers.Layer.WMS( "TopNL Routes",
+					  wmsURL, {layers: 'topnl,routes', sld: sld} );
+			map.addLayer(layer2);
+
+	/*		ww = new OpenLayers.Layer.WorldWind( "Bathy",
 			 "http://worldwind25.arc.nasa.gov/tile/tile.aspx?", 36, 4,
 			 {T:"bmng.topo.bathy.200406"});
 			 ww2 = new OpenLayers.Layer.WorldWind( "LANDSAT",
 				 "http://worldwind25.arc.nasa.gov/tile/tile.aspx", 2.25, 4,
 				 {T:"105"});
 			map.addLayer(ww);
-			map.addLayer(ww2);
+			map.addLayer(ww2);      */
 
 			//layer2 = new OpenLayers.Layer.WMS( "Routes",
 			//		  "http://suwa:8080/geoserver/wms",
