--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -9,25 +9,42 @@
 		<!--
 		var lon = 4.80;
 		var lat = 52.35;
-		var zoom = 13;
+		var x = 111000;
+		var y = 487000;
+		var zoom = 5;
 		var map, layer1,layer2;
 
 		function init() {
-			map = new OpenLayers.Map( $('map'), {controls: [new OpenLayers.Control.MouseDefaults(), new OpenLayers.Control.PanZoomBar()], maxResolution: 1.40625/2, numZoomLevels: 17});
+			/* map = new OpenLayers.Map( $('map'),
+			{controls: [new OpenLayers.Control.MouseDefaults(), new OpenLayers.Control.PanZoomBar()],
+				maxResolution: 1.40625/2,
+				numZoomLevels: 17}); */
+
+			//<BoundingBox SRS="EPSG:28992" minx="3944.0000652443" miny="309541.000249053" maxx="276149.999934756"
+			//		 maxy="599336.999750947"/>
+			map = new OpenLayers.Map($('map'), {
+				controls: [new OpenLayers.Control.MouseDefaults(), new OpenLayers.Control.PanZoomBar()],
+				maxExtent: new OpenLayers.Bounds(-157973.103596, 300670.145842, 472056.321374,678687.800824),
+				units: 'meters', projection: "EPSG:28992", 'maxResolution':'auto'});
 			//layer1 = new OpenLayers.Layer.WMS( "OpenLayers WMS",
 			//		  "http://labs.metacarta.com/wms/vmap0", {layers: 'basic'} );
 			//map.addLayer(layer1);
 
 			// PostGIS routes projected on topo-map
-			var wmsURL='http://88.198.19.182/cgi-bin/mapserv?map=/var/keyworx/webapps/mapserver/topnl/topnl.map';
+		/*	var wmsURL='http://88.198.19.182/cgi-bin/mapserv?map=/var/keyworx/webapps/mapserver/topnl/topnl.map';
 			var sld='http://88.198.19.182/mapserver/topnl/select-route.sld';
 			layer1 = new OpenLayers.Layer.WMS( "Amstelveen Routes",
 					  wmsURL, {layers: 'amstelveen,routes', sld: sld} );
 			map.addLayer(layer1);
 
-			layer2 = new OpenLayers.Layer.WMS( "TopNL Routes",
+			layer2 = new OpenLayers.Layer.WMS( "Geese WMS",
 					  wmsURL, {layers: 'topnl,routes', sld: sld} );
-			map.addLayer(layer2);
+			map.addLayer(layer2);       */
+
+			wmsURL = 'http://www.geese.nl/milcon?';
+			layer3 = new OpenLayers.Layer.WMS.Untiled( "TopNL Geese",
+					  wmsURL, {layers: 't250,t50,t25,t10'} );
+			map.addLayer(layer3);
 
 	/*		ww = new OpenLayers.Layer.WorldWind( "Bathy",
 			 "http://worldwind25.arc.nasa.gov/tile/tile.aspx?", 36, 4,
@@ -44,7 +61,7 @@
 			//	 transparent: 'true'});
 			//map.addLayer(layer2);
 
-			map.setCenter(new OpenLayers.LonLat(lon, lat), zoom);
+			map.setCenter(new OpenLayers.LonLat(x, y), zoom);
 			map.addControl( new OpenLayers.Control.LayerSwitcher() );
 
 		}
