--- a/app/diwi/trunk/client/web/test/route-map.html
+++ b/app/diwi/trunk/client/web/test/route-map.html
@@ -9,9 +9,9 @@
 		<!--
 		var lon = 4.80;
 		var lat = 52.35;
-		var x = 111000;
-		var y = 487000;
-		var zoom = 8;
+		var x = 118000;
+		var y = 480000;
+		var zoom = 7;
 		var map, layer1,layer2,layer3,layer4,layer5,layer6;
 
 		function init() {
@@ -85,6 +85,7 @@
 </head>
 
 <body onload="init()">
+<p>Test met route overlay uit PostGIS op WMS kaartlagen. Selecteer kaartlaag met (+) symbool. Inzoomen met shift-mouse-drag.</p>
 <div id="map"></div>
 </body>
 
