otter: slight JS changes

--- a/app/otter/trunk/server/webapp/mainmenu.html
+++ b/app/otter/trunk/server/webapp/mainmenu.html
@@ -3,10 +3,10 @@
 		<li><a href="#">Show</a>
 			<ul>
 				<li><a href="#" fn="GTAPP.mLive">Live Observation</a></li>
-				<li><a href="#" fn="GTAPP.mShowLastPOIs" arg="10">Last 10 Observations</a></li>
-				<li><a href="#" fn="GTAPP.mShowPOIsInBbox" arg="500">All Observations</a></li>
+				<li><a href="#" fn="GTAPP.mShowMediaInBbox" arg="10">Last 10 Observations</a></li>
+				<li><a href="#" fn="GTAPP.mShowMediaInBbox" arg="500">All Observations</a></li>
 				<li><a href="#" fn="GTAPP.mArchive">Track Archive</a></li>
-				<li><a href="#" fn="GTAPP.mShowMediaInBbox" arg="30">Media (max 30)</a></li>
+				<!-- <li><a href="#" fn="GTAPP.mShowMediaInBbox" arg="30">Media (max 30)</a></li> -->
 			</ul>
 		</li>
 
