--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -37,33 +37,27 @@ function selectItem(obj) {
     currentSelection = i;
 }
 
-var imageCounter = 0;
+var imageCounter = -1;
 var imageAantal = 6;
 var imageNames = new Array('home/images/01.gif','home/images/02.jpg','home/images/03.jpg','home/images/04.jpg','home/images/05.jpg','home/images/06.jpg');
-
-var fotoNamenTeller = 0;
-var fotoNamen = new Array('Broeker Pad','Het Heilge Hofje','Tank Route','Vogel Pad','De Laan Uit','Onder de Zoden');
+var fotoNamen = new Array('Broeker Pad','Daatselaarse Pad','Blauwe Kamer','Route Scherpenzeel','Polderverdediging','Dashorster Pad');
 
 function nextImage() {
-	if (imageCounter>2) imageCounter=-1;
 	imageCounter++;
+	if (imageCounter==6) imageCounter=0;
 	toonPlaatje();
-	fotoNamenTeller++;
-	if (fotoNamenTeller == 6) fotoNamenTeller = 0;
 	veranderFotoNaam();
 }
 
 function prevImage() {
-	if (imageCounter<1) imageCounter = imageAantal;
 	imageCounter--;
+	if (imageCounter==-1) imageCounter=5;
 	toonPlaatje();
-	fotoNamenTeller--;
-	if (fotoNamenTeller == -1) fotoNamenTeller = 5;
 	veranderFotoNaam();
 }
 
 function veranderFotoNaam() {
-	dummy = fotoNamen[fotoNamenTeller];
+	dummy = fotoNamen[imageCounter];
 	document.getElementsByTagName("fn")[0].innerHTML=dummy;
 }
 
@@ -126,7 +120,7 @@ function show(d){
 	<fn>Het Broekerpad</fn> <br>
 	<font size="+1"> 
 	<a onClick="prevImage()"><font color="#FFFFFF"> <strong>vorige</strong> </font></a> | 
-	<a href="http://www.hugokeizer.nl"><font color="#FFFFFF"><strong>details</strong> </font></a> | 
+	<a href=""><font color="#FFFFFF"><strong>details</strong> </font></a> | 
 	<a onClick="nextImage()";><font color="#FFFFFF"><strong>volgende</strong> </font></a> 
 	</font>
 	</center>
@@ -145,7 +139,7 @@ function show(d){
 </div>
 <div id="butroutes"> 
 		<a><img id="2" src="home/buttons/route.gif"onMouseOver="highlightItem(this, 1)" 
-		onMouseOut="highlightItem(this, 0)" onClick="nextImage()" border="0"></a> 
+		onMouseOut="highlightItem(this, 0)" onClick="" border="0"></a> 
 </div>
 <div id="butaanmelden"> 
 		<a><img id="3" src="home/buttons/aanmelden.gif"onMouseOver="highlightItem(this, 1)" 
@@ -220,7 +214,7 @@ Struinen door het landschap, met een persoonlijke ‘Digitale Wichelroede’ die int
 	De (tussen)uitkomsten van het onderzoek zullen via verschillende kanalen kenbaar gemaakt worden. Via onze website www.digitalewichelroede.nl kun je ons volgen en kun je lezen over actuele ontwikkelingen.
 </p>
 
-	<strong>Motivatie</strong><br> 
+	<pp><strong>Motivatie</strong><br></pp> 
 <p>
 	Het initiatief voor onderzoeksproject de Digitale Wichelroede sluit aan bij actuele ontwikkelingen op het gebied van recreatie, technologie, en onderzoek. Zo bestaat bij de recreant van nu de wens het landschap, cultuur en geschiedenis te willen ‘beleven’, het liefst op een zo persoonlijke manier. Daarnaast zal onder meer door de vergrijzing de komende jaren de vrije tijd toenemen. De verwachting is bovendien dat locatie gebaseerde technologie innoveert omdat het zich richt op de individuele, plaatsafhankelijke informatievraag, inspeelt op een veranderend gebruik van het landschap – denk bijvoorbeeld aan de economische vernieuwing van landelijke gebieden - en bijdraagt aan een toeristisch-recreatief product geschrankt op GEO-Informatie. 
 </p>
@@ -228,15 +222,15 @@ Struinen door het landschap, met een persoonlijke ‘Digitale Wichelroede’ die int
 		Ook is veel cultuurhistorische informatie, bijvoorbeeld de kennis van historische verenigingen of verhalen van mensen die al heel lang in een bepaald gebied wonen nog niet ontsloten voor digitaal gebruik. Deze informatie is erg waardevol en gaat verloren als hij niet wordt gedocumenteerd. Naast deze noodzaak te ‘bewaren’ is onderzoek van belang omdat al doende bruggen gebouwd en geslagen worden tussen geo-informatie deskundigen, cultuurhistorische bronhouders (zoals gemeenten, provincies, stichtingen en bewoners van een bepaald gebied) en cultuur-toeristische informatie deskundigen. Tegelijkertijd dient het project tot projectontwikkeling. Het is immers een proeftuin voor geo-informatica en mobiele technologie. Kortom, redenen te over voor het doen van onderzoek naar nieuwe manieren van cultuur-toerisme.
 </p>
 
-		<strong>Testgebieden</strong><br>
+		<pp><strong>Testgebieden</strong><br></pp>
 <p>
 	Binnen het project wordt ingezoomd op twee case-gebieden. Beide gebieden kennen een eigen schaal en cultuurhistorich verleden. 
 </p>
-	<strong>Nijevelt</strong><br>
+	<pp><strong>Nijevelt</strong><br></pp>
 <p>
 In deze nieuwbouwwijk in de Vinexwijk Leidsche Rijn in Utrecht bevindt de geschiedenis zich letterlijk onder je voeten in de vorm van archeologische vondsten zoals houten Romeinse boten, een antieke snelweg, en een middeleeuws kasteel. Deze relicten zijn puzzelstukken die deel uitmaken van een groots verhaal dat vertelt over hoe deze plek er tweeduizend jaar geleden en in middeleeuwse tijd uitzag. Boven de grond is weinig meer te zien van het verleden en de Digitale Wichelroede biedt dan ook uitkomst om te verbeelden wat verloren is gegaan. Hier wordt de moderne wichelroede voor de beleving van een relatief klein gebied ingezet. Lopend over het terrein met een Digitale Wichelroede in de aanslag kun je de wereld van de Romeinen en ridders opnieuw oproepen en waan je je archeoloog, zoekend naar ‘sporen’ uit het verleden. 
 </p>
-<strong>Grebbelinie</strong><br>
+<pp><strong>Grebbelinie</strong><br></pp>
 <p>	
 	Het gebied waar de Grebbelinie ligt is grootschaliger dan Nijevelt. Dit gebied vol achttiende-eeuwse fortificaties geldt als een belangrijk toeristisch gebied in de Gelderse Vallei. Hier bevind je je in een lagenlandschap van natuur, cultuur en historie. Met behulp van de Digitale Wichelroede kun je een persoonlijk toegesneden verkenningstocht organiseren door verschillende tijd- en cultuurlagen, op zoek naar kazematten, forten of bijvoorbeeld de mysterieuze drakentandenversperring. 
 	
@@ -247,38 +241,39 @@ In deze nieuwbouwwijk in de Vinexwijk Leidsche Rijn in Utrecht bevindt de geschi
 
 
 <div id="faq" style="display:none;">
-	<br> 
+		<WelkomHeader><strong>Veel gestelde vragen</strong><br></WelkomHeader>
 <welkomtekst>
-	<strong>Wat is de Digitale Wichelroede?</strong><br>
+<p></p>
+<pp><strong>Wat is de Digitale Wichelroede?</strong><br></pp>
 <p>
 Bij de recreant van nu bestaat de wens het landschap, cultuur en geschiedenis te willen ‘beleven’, het liefst op een zo persoonlijke manier. Daarnaast zal onder meer door de vergrijzing de komende jaren de vrije tijd alleen maar toenemen. Tijd voor het ontwikkeling van nieuwe manieren van actief educatief recreëren. Struinen door het landschap bijvoorbeeld, met een persoonlijke ‘Wichelroede’ die informatie geeft op het moment dat jij als gebruiker persoonlijk geprikkeld wil worden, of die je kan ‘laden’ met eigen persoonlijke verhalen. Want de moderne ‘Wichelroede’ is geen eenvoudige wilge- of hazelaartak, maar een kien product uit de mobiele en locatie bepalingstechnologie, waarmee de gebruiker al lopend of fietsend zijn omgeving fysiek én virtueel kan beleven. 
 <br><br>
 Deze kennis wordt digitaal gemaakt en gekoppeld aan GEO-Informatie (informatie over geografische objecten, bijvoorbeeld land kaarten of luchtfoto’s). Kennis en mogelijke routes worden in een mobiel apparaat geladen en met behulp van GPS als navigator vindt vervolgens een interactieve overdracht plaats van informatie tussen consument of producent en landschap. Project de Digitale Wichelroede is een onderzoeksproject, hetgeen inhoudt dat we onderzoeken wat mogelijkheden en de onmogelijkheden van een Digitale Wichelroede zijn. Er wordt daarom een testversie ontwikkeld. 
 <br><br>
 </p>
-<strong>Is de Digitale Wichelroede te koop?</strong><br>
+<pp><strong>Is de Digitale Wichelroede te koop?</strong></pp><br>
 <p>
 Nee. De Digitale Wichelroede is een onderzoeksproject. Dit betekent dat we een nul-versie ontwikkelen die in de zomer van 2007 door een speciaal team wordt getest. Uiteindelijk moeten de resultaten leiden tot het opstellen van een rapport waarin onder meer de bruikbaarheid van een systeem om kennis digitaal op te slaan en van de interface, de ordening van informatie, het onderscheid tussen passief en actief gebruik met het oog op gebruiksgemak, -plezier en intensiteit geëvalueerd wordt. Met de resultaten van ons onderzoek kan in een vervolgtraject een product voor de markt worden gemaakt.
 </p>
-<strong>Waarom is onderzoek naar mogelijkheden van gebruik van Locatie gebaseerde</strong> <br>
-</welkomtekst><welkomtekst>
-<strong>technologie van belang?</strong><br>
+<pp><strong>Waarom is onderzoek naar mogelijkheden van gebruik</strong></pp> <br>
+<pp><strong> van Locatie gebaseerde technologie van belang?</strong></pp><br>
 <p>
 De verwachting is dat Locatie gebaseerde technologie innoveert omdat het zich richt op de individuele, plaatsafhankelijke informatievraag, inspeelt op een veranderend gebruik van het landschap (onder andere economische vernieuwing van landelijke gebieden) en bijdraagt aan een toeristisch-recreatief product geschrankt op GEO-Informatie. Bovendien is veel cultuurhistorische kennis nog niet ontsloten voor digitaal gebruik. Denk bijvoorbeeld aan de kennis van historische verenigingen of van mensen die vaak al jaar en dag in een bepaalde streek wonen en de prachtigste verhalen hebben. Deze kennis is wel erg waardevol. Het is belangrijk deze verhalen digitaal op te slaan zodat je ze makkelijk opnieuw kan gebruiken. Bijvoorbeeld voor de Digitale Wichelroede. Met project de Digitale Wichelroede bouwen en slaan we bruggen tussen geo-informatie deskundigen, cultuurhistorische bronhouders (zoals gemeenten, provincies, stichtingen en bewoners van een bepaald gebied) en educatie-toeristische informatie deskundigen. Tegelijkertijd dient het project tot projectontwikkeling, want is het een proeftuin voor geo-informatica en mobiele technologie. 
 </p>
-<strong>In welke gebieden wordt de Digitale Wichelroede in 2007 getest?</strong><br>
+<pp><strong>In welke gebieden wordt de Digitale Wichelroede</strong></pp><br>
+<pp><strong>in 2007 getest?</strong></pp><br>
 <p>
 Er wordt op twee gebieden onderzoek gedaan. In Nijevelt, een nieuwbouwwijk in het Utrechtse Leidsche Rijn en in de rgeio waar de Grebbelinie ligt.
 </p>
-<strong>Nijevelt</strong><br>
+<pp><strong>Nijevelt</strong></pp><br>
 <p>
 In deze nieuwbouwwijk wordt de Digitale Wichelroede voor de beleving van een relatief klein gebied ingezet. In Nijevelt bevindt de geschiedenis zich letterlijk in de aarde onder je voeten, in de vorm van archeologische vondsten als boten en een antieke snelweg. Deze vondsten zijn puzzelstukken die deel uitmaken van een groot verhaal dat vertelt over hoe deze plek er tweeduizend jaar geleden uitzag. Boven de grond is weinig meer te zien van het verleden. Lopend over het terrein met een Digitale Wichelroede in de aanslag kun je de wereld van de Romeinen opnieuw oproepen en waan je je archeoloog, zoekend naar ‘sporen’ uit het verleden. 
 </p>
-<strong>Grebbelinie</strong><br>
+<pp><strong>Grebbelinie</strong></pp><br>
 <p>
 Het gebied waar de Grebbelinie ligt is grootschaliger dan die van de Limesweg. Dit gebied vol achttiende-eeuwse fortificaties geldt als een belangrijk toeristisch gebied in de Gelderse Vallei. Hier bevindt de bezoeker zich in een lagenlandschap van natuur, cultuur en historie. Met behulp van locatie gebaseerde services kun je je persoonlijk toegesneden verkenningstocht organiseren en kennis opdoen van verschillende tijdslagen en cultuurlagen.
 </p>
-<strong>Contact</strong><br>
+<pp><strong>Contact</strong></pp><br>
 <p>
 De Wichelroede wordt mede mogelijk gemaakt door Ruimte voor Geo-Informatie (RGI) en Provincie Utrecht en wordt uitgevoerd door een consortium waarin de volgende partners plaatsnemen: Alterra, DS, Galileo, Gemeente Utrecht, Kadaster TDN, KPN, Provincie Utrecht, Stichting Vernieuwing Gelderse Vallei (SVGV), Waag en Wageningen Universiteit. 
 
