diwi: client javascript login example

--- a/app/diwi/trunk/client/web/test/index.html
+++ b/app/diwi/trunk/client/web/test/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 	<title>DIWI Web Client Tests</title>
-	<link rel="stylesheet" href="../css/diwi.css" type="text/css"/>
+	<link rel="stylesheet" href="css/common.css" type="text/css"/>
 
 </head>
 
@@ -19,6 +19,10 @@ Several tests/try outs for DIWI web client.
 	<tr>
 		<td><a href="route-map.html">route-map.html</a></td>
 		<td>WMS/PostGIS Layering OpenLayers</td>
+	</tr>
+	<tr>
+		<td><a href="kwclient-login.html">kwclient-login.html</a></td>
+		<td>KWClient Login voorbeeld</td>
 	</tr>
 </table>
 </body>
