--- a/app/diwi/trunk/client/web/test/route-map.html
+++ b/app/diwi/trunk/client/web/test/route-map.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 	<title>DIWI</title>
-	<link rel="stylesheet" href="../css/diwi.css" type="text/css"/>
+	<link rel="stylesheet" href="css/common.css" type="text/css"/>
 	<script type="text/javascript" src="../lib/openlayers/lib/OpenLayers.js"></script>
 	<script type="text/javascript">
 		<!--
