base: fixes for caching, track viewing and rand() to random() for PG

--- a/base/trunk/server/webapp/gt/mainmenu.html
+++ b/base/trunk/server/webapp/gt/mainmenu.html
@@ -51,8 +51,8 @@
 		</li>
 		<li><a href="#">My</a>
 			<ul>
-				<li><a href="#" fn="GTAPP.mMy" >MyAdmin</a></li>
-				<li><a href="#" fn="GTAPP.mWebTracer" >WebTracer</a></li>
+				<li><a href="#" fn="GTAPP.mMy" >Login</a></li>
+<!--				<li><a href="#" fn="GTAPP.mWebTracer" >WebTracer</a></li>   -->
 			</ul>
 		</li>
 	</ul>
