--- a/app/diwi/trunk/client/web/mypage/mypage.html
+++ b/app/diwi/trunk/client/web/mypage/mypage.html
@@ -6,8 +6,81 @@
   <link rel="stylesheet" type="text/css" href="css/config.css">
 
 </head>
-<script language="JavaScript" type="text/JavaScript">
+	<script type="text/javascript" src="../lib/gt/DHTML.js"></script>
+	<script type="text/javascript" src="../lib/gt/KWClient.js"></script>
+	<script type="text/javascript">
 
+/************ De Session wordt uit een koekje gehaald... ********************/
+		var TST = {
+			// Initialization of KWClient library
+			init: function() {
+				TST.pr('init...');
+
+				// KeyWorx client with
+				// callbacks (2x)
+				// server timeout in minutes
+				// server root path /diwi
+				KW.init(TST.onRsp, TST.onNegRsp, 100, '/diwi');
+
+				// Try to restore and continue with saved session
+				TST.pr('init done, restoring session');
+				KW.restoreSession();
+				document.getElementsByTagName("name")[0].innerHTML=KW.agentKey;
+				TST.pr('restored session, key=' + KW.agentKey);
+
+				TST.testUtopia();
+			},
+
+				// test fun to see if session is really active
+			testUtopia: function() {
+				TST.pr('testUtopia start');
+
+				// May use any request, here a common one: echo
+				var req = KW.createRequest('echo-req');
+				KW.post(TST.onRsp, req);
+			},
+			logout: function() {
+				TST.pr('logout start');
+				// KeyWorx client
+				KW.logout();
+				TST.pr('logout sent');
+				return false;
+			},
+
+
+			onRsp: function(elm) {
+				if (!elm) {
+					TST.pr('empty response');
+					return;
+				}
+
+				TST.pr('got server response ' + elm.tagName);
+				if (elm.tagName == 'person-getdefault-rsp') {
+					TST.pr('person-getlist OK');
+				} else {
+					TST.pr('rsp tag=' + elm.tagName + ' ' + elm);
+				}
+				if (elm.tagName == 'logout-rsp') {
+					TST.pr('logout OK');
+					document.location.href='../index.html' ;
+				} 
+			},
+
+		// KWClient negative response handler.
+			onNegRsp: function(errorId, error, details) {
+				TST.pr('negative resp:' + error + ' details=' + details);
+			},
+
+		// Util for printing/displaying debug output
+			pr: function (s) {
+				DH.addHTML('result', '<br/>' + s);
+			}
+
+		}
+
+		// Call TST.init() when page is fully loaded
+		DH.addEvent(window, 'load', TST.init, false);
+/*******************************************************************************/
 var currentSelection = 1;
 var toolbarData = new Array();
 toolbarData[1] = new Array('buttons/routes.jpg', 'buttons/routes.jpg', 'buttons/routes.jpg');
@@ -201,7 +274,7 @@ function show(d){
 	</personaliaheader>
 	<personaliatekst>
 	<img  src="images/self.jpg" border="0" align="left">
-	Haai, mijn naam is Steve Albini en ik ben het meest bekend geworden als producer van de Pixies en natuurlijk Nirvana! 
+	Haai, mijn naam is <name>Steve Albini</name> en ik ben het meest bekend geworden als producer van de Pixies en natuurlijk Nirvana! 
 	</personaliatekst>
 </div>
 <div id="personaliameer">
