--- a/app/diwi/trunk/client/web/mypage/mypage.html
+++ b/app/diwi/trunk/client/web/mypage/mypage.html
@@ -196,7 +196,7 @@ function show(d){
 </div>
 <div id="butuitloggen"> 
 	<a><img id="5" src="buttons/uitloggen.jpg"onMouseOver="highlightItem(this, 1)" 
-		onMouseOut="highlightItem(this, 0)" onClick="selectItem(this);show(0);" border="0"></a> 
+		onMouseOut="highlightItem(this, 0)" onClick="selectItem(this); javascript:TST.logout()" border="0"></a> 
 </div>
 
 
